--- a/templates/index.html
+++ b/templates/index.html
@@ -221,7 +221,7 @@
                     <p style="color: red;">{{ result }}</p>
                 {% else %}
                     <h3>KẾT QUẢ</h3>
-                    <p>Điểm CCNN quy đổi: {{ result.diem_nang_luc }}</p>
+                    <p>Điểm CCQT quy đổi: {{ result.diem_nang_luc }}</p>
                     <p>Điểm TNTHPT quy đổi: {{ result.diem_tnthpt_quy_doi }}</p>
                     <p>Điểm học tập quy đổi: {{ result.diem_hpt_quy_doi }}</p>
                     <p>Điểm xét tuyển (thang 100, chưa tính điểm cộng và điểm Ưu tiên): {{ result.diem_xet_tuyen }}</p>
@@ -250,7 +250,7 @@
 
         // Bảng quy đổi điểm chứng chỉ với ngưỡng
         const conversionTable = {
-            SAT: { 1600: 100, 1584: 99, 1568: 98, 1552: 97, 1536: 96, 1520: 95, 1504: 94, 1488: 93, 1472: 92, 1456: 91, 1440: 90, 1424: 89, 1408: 88, 1392: 87, 1376: 86, 1360: 85, 1344: 84, 1328: 83, 1312: 82, 1296: 81, 1280: 80, 1264: 79, 1248: 78, 1232: 77, 1216: 76, 1200: 75 },
+            SAT: { 1600: 100, 1584: 99, 1568: 98, 1552: 97, 1536: 96, 1520: 95, 1504: 94, 1488: 93, 1472: 92, 1456: 91, 1440: 90, 1424: 89, 1408: 88, 1392: 87, 1376: 86, 1360: 85, 1344: 84, 1328: 83, 1312: 82, 1296: 81, 1280: 80, 1264: 79, 1248: 78, 1232: 77, 1216: 76, 1200: 75, 1184:74 },
             ACT: { 36: 100, 35: 98, 34: 95, 33: 93, 32: 90, 31: 88, 30: 86, 29: 84, 28: 82, 27: 81, 26: 78, 25: 76, 24: 74 },
             IB: { 42: 100, 41: 98, 40: 96, 39: 94, 38: 91, 37: 89, 36: 86, 35: 84, 34: 82, 33: 79, 32: 77, 31: 74, 30: 71, 29: 69, 28: 67, 27: 64, 26: 62 },
             'A-Level': { 'A*': 95, 'A': 85, 'B': 75, 'C': 65 }
